--- a/sources/bio.html
+++ b/sources/bio.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <title>Bio</title>
     <h1> Here is a little information about me, so you get to know me better</h1>
-    <p> Born and raised in Syria, moved to the united states in 2016.
+    <div><p> Born and raised in Syria, moved to the united states in 2016.
       I have lived in North Carolina from 2016 to 2018.
       I moved to Atlanta, GA in 2018 to pursue a bachelor degree in Computer Information Systems.
       Before coming to the United States, I lived in Turkey between 2013 and 2016.
       I enjoy cooking and learning langauges. I speak Arabic, Kurdish, English, Turkish, and still learning Spanish.
-      In addition, I enjoy to participate in a competition shooting.</p>
+      In addition, I enjoy to participate in a competition shooting.</p></div>
   </head>
   <body>
   </body>
