--- a/sources/bio.html
+++ b/sources/bio.html
@@ -1,4 +1,6 @@
+<!DOCTYPE>
 <html lang="en" dir="ltr">
+<center><img src="../image.jpg/syria.jpg" alt="syria map"></center>
   <head>
     <link rel="stylesheet" href="../css/bio.css">
     <meta charset="utf-8">
