--- a/sources/bio.html
+++ b/sources/bio.html
@@ -1,7 +1,19 @@
 <!DOCTYPE>
 <html lang="en" dir="ltr">
+<nav>
+  <h2 class="nav--main"><a href="#">Habo Mohamad Alo</a></h2>
+  <ul class="nav--list">
+    <li class="nav--item"><a href="/sources/home.html"> Home</a></li>
+    <li class="nav--item"><a href="/sources/bio.html"> Bio</a></li>
+    <li class="nav--item"><a href="/sources/resume.html">Resume</a></li>
+    <li class="nav--item"><a href="/sources/projects.html">Projects</a></li>
+    <li class="nav--item"><a href="/sources/contact.html"> Contact</a></li>
+    <li class="nav--item"><a href="/sources/links.html">Links</a></li>
+  </ul>
+</nav>
 <center><img src="../image.jpg/syria.jpg" alt="syria map"></center>
   <head>
+
     <link rel="stylesheet" href="../css/bio.css">
     <meta charset="utf-8">
     <title>Bio</title>
@@ -14,5 +26,6 @@
       In addition, I enjoy to participate in a competition shooting.</p></div>
   </head>
   <body>
+
   </body>
 </html>
