--- a/sources/bio.html
+++ b/sources/bio.html
@@ -1,31 +1,33 @@
 <!DOCTYPE>
 <html lang="en" dir="ltr">
-<nav>
-  <h2 class="nav--main"><a href="#">Habo Mohamad Alo</a></h2>
-  <ul class="nav--list">
-    <li class="nav--item"><a href="/sources/home.html"> Home</a></li>
-    <li class="nav--item"><a href="/sources/bio.html"> Bio</a></li>
-    <li class="nav--item"><a href="/sources/resume.html">Resume</a></li>
-    <li class="nav--item"><a href="/sources/projects.html">Projects</a></li>
-    <li class="nav--item"><a href="/sources/contact.html"> Contact</a></li>
-    <li class="nav--item"><a href="/sources/links.html">Links</a></li>
-  </ul>
-</nav>
-<center><img src="../image.jpg/syria.jpg" alt="syria map"></center>
-  <head>
 
-    <link rel="stylesheet" href="../css/bio.css">
+
+  <head>
+    <link rel="stylesheet" href="../css/main.css">
     <meta charset="utf-8">
     <title>Bio</title>
+  </div>
+  </head>
+</div>
+  <body>
+    <nav>
+      <h2 class="nav--main"><a href="#">Habo Mohamad Alo</a></h2>
+      <ul class="nav--list">
+        <li class="nav--item"><a href="/index.html"> Home</a></li>
+        <li class="nav--item"><a class="active"href="/sources/bio.html"> Bio</a></li>
+        <li class="nav--item"><a href="/sources/resume.html">Resume</a></li>
+        <li class="nav--item"><a href="/sources/projects.html">Projects</a></li>
+        <li class="nav--item"><a href="/sources/contact.html"> Contact</a></li>
+        <li class="nav--item"><a href="/sources/links.html">Links</a></li>
+      </ul>
+    </nav>
+    <main><img src="../image.jpg/syria.jpg" alt="syria map">
     <h1> Here is a little information about me, so you get to know me better</h1>
      <p> Born and raised in Aleppo-Syria, moved to the united states in 2016.
       I have lived in North Carolina from 2016 to 2018.
       I moved to Atlanta, GA in 2018 to pursue a bachelor degree in Computer Information Systems.
       Before coming to the United States, I lived in Turkey between 2013 and 2016.
       I enjoy cooking and learning langauges. I speak Arabic, Kurdish, English, Turkish, and still learning Spanish.
-      In addition, I enjoy to participate in a competition shooting.</p></div>
-  </head>
-  <body>
-
+      In addition, I enjoy to participate in a competition shooting.</p></main>
   </body>
 </html>
